@@ -3,8 +3,12 @@ Summary of important user-visible changes for financial 0.X.X:
 
  ** `isbusday' has been fixed to accept non-integer values.
 
- ** `holidays' has been fixed to check that New Year's holiday falls on
-    a Saturday.
+ ** `holidays' has been changed to include past dates where the NYSE
+    was closed due to exceptional reasons.
+
+ ** `holidays' has been fixed to not count New Year's holidays when it
+    falls on a Saturday (Saturday holidays should be shifted to the
+    previous Friday except when it crosses a calendar year).
 
 Summary of important user-visible changes for financial 0.4.0:
 -------------------------------------------------------------------
